k8s/aims-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    svc: aims-web
    component: aims-web-app    
  name: aims-web-app
  namespace: aims-web
spec:
  replicas: 1 
  selector:
    matchLabels:
      svc: aims-web
      component: aims-web-app
  template:
    metadata:
      labels:
        svc: aims-web
        component: aims-web-app
      name: aims-web-app
    spec:
      #securityContext:
        #runAsUser: 1000
        #runAsGroup: 3000
        #fsGroup: 2000
        #runAsNonRoot: true
      containers:
      - image: dedicatedprodacr.azurecr.io/aims/aims-web:prod-20211221
        name: aims-web-tomcat
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - mountPath: "/app/aims-attach/resources/attach"
          name: file-attach
        - mountPath: "/app/aims-logs"
          name: logs
      volumes:
      - name: file-attach
        persistentVolumeClaim:
          claimName: aims-attach-pvc
      - name: logs
        persistentVolumeClaim:
          claimName: aims-logs-pvc
