k8s/aims-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: private-nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
  labels:
    svc: aims-web
  name: aims-web-ingress
  namespace: aims-web
spec:
  rules:
  - host: aims.skinnovation.com
    http:
      paths:
      - backend:
          service:
            name: aims-web
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
